--- a/tests/org.eclipse.incquery.testing.queries/plugin.xml
+++ b/tests/org.eclipse.incquery.testing.queries/plugin.xml
@@ -4,20 +4,20 @@
    
    
    
-   <extension id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord" point="org.eclipse.incquery.runtime.queryspecification">
-    <matcher id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord" querySpecificationProvider="org.eclipse.incquery.testing.queries.util.UnexpectedMatchRecordQuerySpecification$Provider"/>
-  </extension>
-   <extension id="org.eclipse.incquery.testing.queries.RecordRoleValue" point="org.eclipse.incquery.runtime.queryspecification">
-    <matcher id="org.eclipse.incquery.testing.queries.RecordRoleValue" querySpecificationProvider="org.eclipse.incquery.testing.queries.util.RecordRoleValueQuerySpecification$Provider"/>
-  </extension>
+   
+   
    <extension id="extension.derived.org.eclipse.incquery.testing.queries.RecordRoleValue" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
     <wellbehaving-derived-feature classifier-name="MatchRecord" feature-name="role" package-nsUri="http://www.eclipse.org/incquery/snapshot"/>
   </extension>
-   <extension id="org.eclipse.incquery.testing.queries.SubstitutionValue" point="org.eclipse.incquery.runtime.queryspecification">
-    <matcher id="org.eclipse.incquery.testing.queries.SubstitutionValue" querySpecificationProvider="org.eclipse.incquery.testing.queries.util.SubstitutionValueQuerySpecification$Provider"/>
-  </extension>
+   
    <extension id="extension.derived.org.eclipse.incquery.testing.queries.SubstitutionValue" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
     <wellbehaving-derived-feature classifier-name="MatchSubstitutionRecord" feature-name="derivedValue" package-nsUri="http://www.eclipse.org/incquery/snapshot"/>
   </extension>
 
+
+
+
+<extension id="org.eclipse.incquery.testing.queries.MatchRecordQueries" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.testing.queries.MatchRecordQueries" id="org.eclipse.incquery.testing.queries.MatchRecordQueries"/>
+  </extension>
 </plugin>
