--- a/bpm/org.eclipse.incquery.examples.bpm.incquery/plugin.xml
+++ b/bpm/org.eclipse.incquery.examples.bpm.incquery/plugin.xml
@@ -1,172 +1,51 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <plugin>
 
-   <extension
-         id="operation.queries.ChecklistEntryJobCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.ChecklistEntryJobCorrespondenceQuerySpecification$Provider"
-            id="operation.queries.ChecklistEntryJobCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.operation.queries.ChecklistEntryJobCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="ChecklistEntry"
-            feature-name="jobs"
-            package-nsUri="http://operation/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="operation.queries.ChecklistEntryTaskCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.ChecklistEntryTaskCorrespondenceQuerySpecification$Provider"
-            id="operation.queries.ChecklistEntryTaskCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.operation.queries.ChecklistEntryTaskCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="ChecklistEntry"
-            feature-name="task"
-            package-nsUri="http://operation/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="operation.queries.ChecklistProcessCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.ChecklistProcessCorrespondenceQuerySpecification$Provider"
-            id="operation.queries.ChecklistProcessCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.operation.queries.ChecklistProcessCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="Checklist"
-            feature-name="process"
-            package-nsUri="http://operation/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="operation.queries.IncorrectEntryInChecklist"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.IncorrectEntryInChecklistQuerySpecification$Provider"
-            id="operation.queries.IncorrectEntryInChecklist">
-      </matcher>
-   </extension>
-   <extension
-         id="operation.queries.TaskChecklistEntryJobCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.TaskChecklistEntryJobCorrespondenceQuerySpecification$Provider"
-            id="operation.queries.TaskChecklistEntryJobCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="operation.queries.DataReadByChecklistEntry"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="operation.queries.util.DataReadByChecklistEntryQuerySpecification$Provider"
-            id="operation.queries.DataReadByChecklistEntry">
-      </matcher>
-   </extension>
-   <extension
-         id="system.queries.JobTaskCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.JobTaskCorrespondenceQuerySpecification$Provider"
-            id="system.queries.JobTaskCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.system.queries.JobTaskCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="Job"
-            feature-name="tasks"
-            package-nsUri="http://system/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="system.queries.DataTaskReadCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.DataTaskReadCorrespondenceQuerySpecification$Provider"
-            id="system.queries.DataTaskReadCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.system.queries.DataTaskReadCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="Data"
-            feature-name="readingTask"
-            package-nsUri="http://system/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="system.queries.DataTaskWriteCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.DataTaskWriteCorrespondenceQuerySpecification$Provider"
-            id="system.queries.DataTaskWriteCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.system.queries.DataTaskWriteCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="Data"
-            feature-name="writingTask"
-            package-nsUri="http://system/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="system.queries.JobInfoCorrespondence"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.JobInfoCorrespondenceQuerySpecification$Provider"
-            id="system.queries.JobInfoCorrespondence">
-      </matcher>
-   </extension>
-   <extension
-         id="extension.derived.system.queries.JobInfoCorrespondence"
-         point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
-      <wellbehaving-derived-feature
-            classifier-name="Job"
-            feature-name="info"
-            package-nsUri="http://system/1.0">
-      </wellbehaving-derived-feature>
-   </extension>
-   <extension
-         id="system.queries.UndefinedServiceTasks"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.UndefinedServiceTasksQuerySpecification$Provider"
-            id="system.queries.UndefinedServiceTasks">
-      </matcher>
-   </extension>
-   <extension
-         id="system.queries.TasksAffectedThroughData"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.TasksAffectedThroughDataQuerySpecification$Provider"
-            id="system.queries.TasksAffectedThroughData">
-      </matcher>
-   </extension>
-   <extension
-         id="system.queries.TransitiveAffectedTasksThroughData"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="system.queries.util.TransitiveAffectedTasksThroughDataQuerySpecification$Provider"
-            id="system.queries.TransitiveAffectedTasksThroughData">
-      </matcher>
+   
+   <extension id="extension.derived.operation.queries.ChecklistEntryJobCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="ChecklistEntry" feature-name="jobs" package-nsUri="http://operation/1.0"/>
+  </extension>
+   
+   <extension id="extension.derived.operation.queries.ChecklistEntryTaskCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="ChecklistEntry" feature-name="task" package-nsUri="http://operation/1.0"/>
+  </extension>
+   
+   <extension id="extension.derived.operation.queries.ChecklistProcessCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="Checklist" feature-name="process" package-nsUri="http://operation/1.0"/>
+  </extension>
+   
+   
+   
+   
+   <extension id="extension.derived.system.queries.JobTaskCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="Job" feature-name="tasks" package-nsUri="http://system/1.0"/>
+  </extension>
+   
+   <extension id="extension.derived.system.queries.DataTaskReadCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="Data" feature-name="readingTask" package-nsUri="http://system/1.0"/>
+  </extension>
+   
+   <extension id="extension.derived.system.queries.DataTaskWriteCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="Data" feature-name="writingTask" package-nsUri="http://system/1.0"/>
+  </extension>
+   
+   <extension id="extension.derived.system.queries.JobInfoCorrespondence" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
+    <wellbehaving-derived-feature classifier-name="Job" feature-name="info" package-nsUri="http://system/1.0"/>
+  </extension>
+   
+   
+   
+
+   <extension point="org.eclipse.jdt.core.classpathVariableInitializer">
+      <classpathVariableInitializer class="org.eclipse.pde.internal.core.EclipseHomeInitializer" readOnly="true" variable="ECLIPSE_HOME">
+      </classpathVariableInitializer>
    </extension>
 
+  
+<extension id="system.queries.DerivedFeatures" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:system.queries.DerivedFeatures" id="system.queries.DerivedFeatures"/>
+  </extension>
+  <extension id="operation.queries.DerivedFeatures" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:operation.queries.DerivedFeatures" id="operation.queries.DerivedFeatures"/>
+  </extension>
 </plugin>
