--- a/plugins/org.eclipse.incquery.tooling.core/build.properties
+++ b/plugins/org.eclipse.incquery.tooling.core/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                schema/,\
-               about.html
+               about.html,\
+               formatter.xslt
