[434876] Making Sample UI Handler annotation deprecated
Change-Id: Ic9536b8f23b6f04b9b4603dd4ecbf4947f89ffd4

--- a/plugins/org.eclipse.incquery.tooling.generator.sampleui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.generator.sampleui/plugin.xml
@@ -11,6 +11,7 @@
    <extension
          point="org.eclipse.incquery.patternlanguage.annotation">
       <annotation
+            deprecated="true"
             description="This annotation can be used to generate a sample code with a handler and a dialog that shows the matches of the query in a selected file resource."
             name="Handler">
          <annotationparameter
