--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -289,6 +289,7 @@
 			<modules>
 				<module>../../maven/incquery-patternlanguage</module>
 				<module>../../maven/incquery-runtime</module>
+				<module>../../maven/incquery-maven-plugin</module>
 			</modules>
 		</profile>
 		<profile>
