Updated fornax repo url

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -177,7 +177,7 @@
 		<repository>
 			<id>fornax.repository</id>
 			<name>Fornax Repository</name>
-			<url>http://www.fornax-platform.org/m2/repository</url>
+			<url>https://projects.itemis.de/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
@@ -189,7 +189,7 @@
 		<pluginRepository>
 			<id>fornax.plugin.repository</id>
 			<name>Fornax Plugin Repository</name>
-			<url>http://www.fornax-platform.org/m2/repository</url>
+			<url>https://projects.itemis.de/nexus/content/groups/public/</url>
 		</pluginRepository>
 		<pluginRepository>
 			<id>eclipse.plugin.repository</id>
