--- a/plugins/org.eclipse.incquery.patternlanguage/pom.xml
+++ b/plugins/org.eclipse.incquery.patternlanguage/pom.xml
@@ -20,31 +20,18 @@
 					<filesets>
 						<fileset>
 							<directory>src-gen</directory>
-							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
-							</excludes>
 						</fileset>
 						<fileset>
 							<directory>xtend-gen</directory>
-							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
-							</excludes>
+						</fileset>
+						<fileset>
+							<directory>model/generated</directory>
 						</fileset>
 						<fileset>
 							<directory>../${project.artifactId}.ui/src-gen</directory>
-							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
-							</excludes>
 						</fileset>
 						<fileset>
 							<directory>../../tests/${project.artifactId}.tests/src-gen</directory>
-							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
-							</excludes>
 						</fileset>
 					</filesets>
 				</configuration>
