--- a/headless/headlessQueries.incquery/plugin.xml
+++ b/headless/headlessQueries.incquery/plugin.xml
@@ -1,69 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<plugin>
-
-   <extension
-         id="headless.eClassNames"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.EClassNamesQuerySpecification$Provider"
-            id="headless.eClassNames">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.eClassNamesKeyword"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.EClassNamesKeywordQuerySpecification$Provider"
-            id="headless.eClassNamesKeyword">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.eObject"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.EObjectQuerySpecification$Provider"
-            id="headless.eObject">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.classesInPackage"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.ClassesInPackageQuerySpecification$Provider"
-            id="headless.classesInPackage">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.subPackage"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.SubPackageQuerySpecification$Provider"
-            id="headless.subPackage">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.classesInPackageHierarchy"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.ClassesInPackageHierarchyQuerySpecification$Provider"
-            id="headless.classesInPackageHierarchy">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.ePackage"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.EPackageQuerySpecification$Provider"
-            id="headless.ePackage">
-      </matcher>
-   </extension>
-   <extension
-         id="headless.eClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="headless.util.EClassQuerySpecification$Provider"
-            id="headless.eClass">
-      </matcher>
-   </extension>
-
+<?xml version="1.0" encoding="UTF-8"?><plugin>
+  <extension id="headless.HeadlessQueries" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:headless.HeadlessQueries" id="headless.HeadlessQueries"/>
+  </extension>
 </plugin>
