updated and regenerated examples

--- a/papyrus-uml/org.eclipse.incquery.examples.uml.evm/plugin.xml
+++ b/papyrus-uml/org.eclipse.incquery.examples.uml.evm/plugin.xml
@@ -1,101 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
-
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.possibleSuperClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.PossibleSuperClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.possibleSuperClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.onlyInheritedOperations"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.OnlyInheritedOperationsQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.onlyInheritedOperations">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.superClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.SuperClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.superClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.transitiveSuperClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.TransitiveSuperClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.transitiveSuperClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.superOrEqualClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.SuperOrEqualClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.superOrEqualClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.ownsOperation"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.OwnsOperationQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.ownsOperation">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.ownsProperty"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.OwnsPropertyQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.ownsProperty">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.hasOperation"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.HasOperationQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.hasOperation">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.hasProperty"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.HasPropertyQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.hasProperty">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.emptyClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.EmptyClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.emptyClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.nonEmptyClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.NonEmptyClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.nonEmptyClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.evm.queries.test"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.TestQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.evm.queries.test">
-      </matcher>
-   </extension>
-
+  <extension id="org.eclipse.incquery.examples.uml.evm.queries.X" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.examples.uml.evm.queries.X" id="org.eclipse.incquery.examples.uml.evm.queries.X"/>
+  </extension>
+  <extension id="org.eclipse.incquery.examples.uml.evm.queries.Preconditions" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.examples.uml.evm.queries.Preconditions" id="org.eclipse.incquery.examples.uml.evm.queries.Preconditions"/>
+  </extension>
 </plugin>
