update project metadata to 0.8

--- a/papyrus-uml/org.eclipse.incquery.examples.uml.queries/plugin.xml
+++ b/papyrus-uml/org.eclipse.incquery.examples.uml.queries/plugin.xml
@@ -1,93 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<plugin>
-
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.superClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.SuperClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.superClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.transitiveSuperClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.TransitiveSuperClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.transitiveSuperClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.superOrEqualClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.SuperOrEqualClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.superOrEqualClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.ownsOperation"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.OwnsOperationQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.ownsOperation">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.ownsProperty"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.OwnsPropertyQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.ownsProperty">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.hasOperation"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.HasOperationQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.hasOperation">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.hasProperty"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.HasPropertyQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.hasProperty">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.emptyClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.EmptyClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.emptyClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.nonEmptyClass"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.NonEmptyClassQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.nonEmptyClass">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.umlInstanceOf"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.UmlInstanceOfQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.umlInstanceOf">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.incquery.examples.uml.queries.MyProfileApplication"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.MyProfileApplicationQuerySpecification$Provider"
-            id="org.eclipse.incquery.examples.uml.queries.MyProfileApplication">
-      </matcher>
-   </extension>
-
+<?xml version="1.0" encoding="UTF-8"?><plugin>
+  <extension id="org.eclipse.incquery.examples.uml.queries.EmptyClass" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.examples.uml.queries.EmptyClass" id="org.eclipse.incquery.examples.uml.queries.EmptyClass"/>
+  </extension>
+  <extension id="org.eclipse.incquery.examples.uml.queries.ObjectDiagrams" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.examples.uml.queries.ObjectDiagrams" id="org.eclipse.incquery.examples.uml.queries.ObjectDiagrams"/>
+  </extension>
 </plugin>
