--- a/tests/org.eclipse.incquery.testing.queries/plugin.xml
+++ b/tests/org.eclipse.incquery.testing.queries/plugin.xml
@@ -1,4 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?><?eclipse version="3.4"?><plugin>
+<?xml version="1.0" encoding="UTF-8"?>
+<?eclipse version="3.4"?>
+
+<plugin>
   <extension id="extension.derived.org.eclipse.incquery.testing.queries.RecordRoleValue" point="org.eclipse.incquery.runtime.base.wellbehaving.derived.features">
     <wellbehaving-derived-feature classifier-name="MatchRecord" feature-name="role" package-nsUri="http://www.eclipse.org/incquery/snapshot"/>
   </extension>
