--- a/maven/incquery-patternlanguage/pom.xml
+++ b/maven/incquery-patternlanguage/pom.xml
@@ -22,12 +22,12 @@
 		<dependency>
     	    <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.xtext</artifactId>
-            <version>2.5.3</version>
+            <version>${xtend.compiler.version}</version>
         </dependency>
 		<dependency>
     	    <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.xbase</artifactId>
-            <version>2.5.3</version>
+            <version>${xtend.compiler.version}</version>
         </dependency>
 	</dependencies>
 	<properties>
