adding DSE framework to build

--- a/plugins/org.eclipse.viatra.dse.emfdesignspace.model/plugin.properties
+++ b/plugins/org.eclipse.viatra.dse.emfdesignspace.model/plugin.properties
@@ -10,5 +10,5 @@
 ###############################################################################
 #
 
-pluginName = Emfdesignspace Model
+pluginName = VIATRA DSE framework EMF Design Space Model
 providerName = http://www.viatra.inf.mit.bme.hu
