--- a/plugins/org.eclipse.viatra.dse.emfdesignspace.patterns/plugin.xml
+++ b/plugins/org.eclipse.viatra.dse.emfdesignspace.patterns/plugin.xml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
-
-   <extension
-         id="org.eclipse.viatra.dse.emfdesignspace.patterns.states"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.viatra.dse.emfdesignspace.patterns.util.StatesQuerySpecification$Provider"
-            id="org.eclipse.viatra.dse.emfdesignspace.patterns.states">
-      </matcher>
-   </extension>
-   <extension
-         id="org.eclipse.viatra.dse.emfdesignspace.patterns.transitions"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.viatra.dse.emfdesignspace.patterns.util.TransitionsQuerySpecification$Provider"
-            id="org.eclipse.viatra.dse.emfdesignspace.patterns.transitions">
-      </matcher>
-   </extension>
-
+  <extension id="org.eclipse.viatra.dse.emfdesignspace.patterns.Graphviewer" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.dse.emfdesignspace.patterns.Graphviewer" id="org.eclipse.viatra.dse.emfdesignspace.patterns.Graphviewer"/>
+  </extension>
 </plugin>
