--- a/plugins/org.eclipse.viatra.dse.base/pom.xml
+++ b/plugins/org.eclipse.viatra.dse.base/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>org.eclipse.viatra2.emf.parent</artifactId>
-    <groupId>org.eclipse.viatra2.emf</groupId>
+    <groupId>org.eclipse.viatra2</groupId>
     <version>0.7.0-SNAPSHOT</version>
     <relativePath>../../releng/org.eclipse.viatra2.emf.parent/pom.xml</relativePath>
   </parent>
