--- a/plugins/org.eclipse.viatra.dse.genetic/pom.xml
+++ b/plugins/org.eclipse.viatra.dse.genetic/pom.xml
@@ -3,10 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>org.eclipse.viatra.dse.parent</artifactId>
-    <groupId>org.eclipse.viatra.dse</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../releng/org.eclipse.viatra.dse.parent/pom.xml</relativePath>
+    <artifactId>org.eclipse.viatra2.emf.parent</artifactId>
+    <groupId>org.eclipse.viatra2</groupId>
+    <version>0.7.0-SNAPSHOT</version>
+    <relativePath>../../releng/org.eclipse.viatra2.emf.parent/pom.xml</relativePath>
   </parent>
   <artifactId>org.eclipse.viatra.dse.genetic</artifactId>
   <packaging>eclipse-plugin</packaging>
