--- a/plugins/org.eclipse.viatra.dse.emfdesignspace.patterns/pom.xml
+++ b/plugins/org.eclipse.viatra.dse.emfdesignspace.patterns/pom.xml
@@ -57,7 +57,7 @@
         </configuration>
         <dependencies>
           <dependency>
-            <groupId>org.eclipse.viatra2.emf</groupId>
+            <groupId>org.eclipse.viatra2</groupId>
             <artifactId>org.eclipse.viatra.dse.emfdesignspace.model</artifactId>
             <version>${project.version}</version>
           </dependency>
