[451375] new generation validation framework
Change-Id: I95d321d6d63e162c6d6cbc9af5636a0ee2f8f343
Signed-off-by: Balint Lorand <balint.lorand@gmail.com>
Signed-off-by: Abel Hegedus <abel.hegedus@mit.bme.hu>

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -248,6 +248,7 @@
 				<module>../../plugins/org.eclipse.incquery.runtime.gmf</module>
 				<module>../../plugins/org.eclipse.incquery.runtime.graphiti</module>
 				<module>../../plugins/org.eclipse.incquery.databinding.runtime</module>
+				<module>../../plugins/org.eclipse.incquery.validation.core</module>
 				<module>../../plugins/org.eclipse.incquery.validation.runtime</module>
 				<module>../../plugins/org.eclipse.incquery.validation.runtime.ui</module>
 				<module>../../plugins/org.eclipse.incquery.validation.tooling</module>
