--- a/plugins/org.eclipse.incquery.validation.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.validation.runtime/plugin.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension-point id="constraint" name="constraint" schema="schema/constraint.exsd"/>
+<extension-point id="constraint" name="constraint" schema="schema/constraint.exsd"/>
    <extension
          point="org.eclipse.incquery.patternlanguage.annotation">
       <annotation
             additionalValidator="org.eclipse.incquery.validation.runtime.annotation.ConstraintAnnotationValidator"
+            deprecated="false"
             description="This annotation is used to mark a pattern for use in the IncQuery validation framework."
             name="Constraint">
          <annotationparameter
-               description="The location of constraint represents the pattern parameter the object the constraint violation needs to be attached to."
-               mandatory="true"
+               deprecated="true"
+               description="Please use key with a single value list instead!"
+               mandatory="false"
                multiple="false"
                name="location"
                type="variablereference">
+         </annotationparameter>
+         <annotationparameter
+               description="The key of constraint represents the pattern parameter objects the constraint violation needs to be attached to."
+               mandatory="false"
+               multiple="false"
+               name="key"
+               type="list">
          </annotationparameter>
          <annotationparameter
                description="The message to display when the constraint violation is found. The message may refer the parameter variables between $ symbols, or their EMF features, such as in $Param1.name$."
@@ -23,7 +32,7 @@
                type="string">
          </annotationparameter>
          <annotationparameter
-               description="Possible values: &quot;error&quot; and &quot;warning&quot;."
+               description="Possible values: &quot;error&quot;, &quot;warning&quot; and &quot;info&quot;."
                mandatory="true"
                multiple="false"
                name="severity"
@@ -35,6 +44,13 @@
                multiple="true"
                name="targetEditorId"
                type="string">
+         </annotationparameter>
+         <annotationparameter
+               description="Provide parameter a list, where permutations of the same values register as one match violation."
+               mandatory="false"
+               multiple="true"
+               name="symmetric"
+               type="list">
          </annotationparameter>
       </annotation>
    </extension>
